--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "19.1.0"
   },
   "devDependencies": {
+    "@types/node": "^24.3.3",
     "@types/react": "19.1.11",
     "typescript": "5.9.2"
   }
